# RTSP_stream_simple_viewer

./: CMakeLists.txt
configs/: example.json
include/: RTSPConfig.hpp  RTSPRecorder.hpp  RTSPStream.hpp
src/: RTSPConfig.cpp  RTSPRecorder.cpp  RTSPStream.cpp  main.cpp
